--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,9 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/material-design-lite/1.3.0/material.indigo-pink.min.css">
   <link rel="stylesheet" href="/src/css/app.css">
   <link rel="stylesheet" href="/src/css/feed.css">
-  <link rel="manifest" href="/manifest.json" >
+  <link rel="manifest" href="/manifest.json">
 
-  <!--Apple configuration-->
-  <meta name="apple-mobile-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="PWA_UC">
   <link rel="apple-touch-icon" href="/src/images/icons/apple-icon-57x57.png" sizes="57x57">
@@ -31,7 +30,7 @@
   <!--Internet Explorer-->
   <meta name="msapplication-TileImage" content="/src/images/icons/app-icon-144x144.png">
   <meta name="msapplication-TileColor" content="#fff">
-  <meta name="theme-color" content="#3F51B5">
+  <meta name="theme-color" content="#3f51b5">
 </head>
 <body>
 
